tests/negative/gold/incomplete-comments-test.gold
tests/negative/incomplete-comments-test.toit:6:3: error: Unterminated multi-line comment
  /*
  ^~
Compilation failed
